<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GEM</string>
    <string name="head">GEM</string>
    <string name="main1">GEM</string>
    <string name="main2">Group Expense Manager</string>
    <string name="loading">Loading</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="share_screenshot">Share Screenshot</string>
    <string name="export">Export Group Database</string>
    <string name="import_group">Import Group from File</string>
    <string name="add_new_group">Add New Group</string>
    <string name="menu_clear">Clear History</string>
    <string name="deleteEvent">Delete Expense</string>
    <string name="editEvent">Edit Expense</string>
    <string name="previousEvent">Previous Expense</string>
    <string name="nextEvent">Next Expense</string>
    <string name="restoreEvent">Restore Deleted Expense</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">GEM</string>
    <string name="grpname">Group Name</string>
    <string name="currency">Currency</string>
    <string name="name1">Member</string>
    <string name="me">Me</string>
    <string name="add">Add Member</string>
    <string name="done">Done</string>
    <string name="desc">A Minus Icon</string>
    <string name="desc2">An Edit Icon</string>
    <string name="desc3">An Icon</string>
    <string name="title_activity_groups">Group Expense Manager</string>
    <string name="existing_groups">Existing Groups</string>
    <string name="add_group_button">Add</string>
    <string name="import_group_button">Import</string>
    <string name="title_activity_new_group">New Group</string>
    <string name="blank"></string>
    <string name="title_activity_group_summary">Summary</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="test">Test</string>
    <string name="spent">Spent</string>
    <string name="consumed">Consumed</string>
    <string name="topay">To Pay</string>
    <string name="toget">To Get</string>
    <string name="addevent">Add Expense</string>
    <string name="cashtransfer">Cash Transfer</string>
    <string name="title_activity_cash_transfer">Cash Transfer</string>
    <string name="amount">Amount</string>
    <string name="solution">Solution</string>
    <string name="summary">Summary</string>
    <string name="history">History</string>
    <string name="clear">Clear Balance</string>
    <string name="title_activity_add_event">Add Expense</string>
    <string name="title_activity_possible_solution">Possible Solution</string>
    <string name="title_activity_individual_summary">Individual Summary</string>
    <string name="done_button1">Done</string>
    <string name="title_activity_events">Events</string>
    <string name="done_button2">Done</string>
    <string name="add_button">Add another</string>
    <string name="share_button">Share Among</string>
    <string name="paid">Paid</string>
    <string name="nextButton">Next</string>
    <string name="eventname">Expense Name</string>
    <string name="eventtype">Type</string>
    <string name="addButton">Add</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="consumption">Consumption</string>
    <string name="payment">Payment</string>
    <string name="title_activity_edit_group">Edit</string>
    <string name="groupsummaryname">Name</string>
    <string name="title_activity_history">History</string>
    <string name="selectevent">Select Expense</string>
    <string name="selectmember">Select Member</string>
    <string name="member">Member</string>
    <string name="paidby">Paid By</string>
    <string name="consumedby">Consumed By</string>
    <string name="addanother">Add Another</string>
    <string name="clearhistory">Clear History</string>
    <string name="version">Version 4.0</string>
    <string name="developedby">Developed by:</string>
    <string name="aditya">Aditya Bhandari</string>
    <string name="sameer">Sameer Kumar Agrawal</string>
    <string name="nikunj">Nikunj Saunshi</string>
    <string name="amit">Amit Panghal</string>
    <string name="title_activity_about">Group Expense Manager - About</string>
    <string name="title_activity_new_group_mod">NewGroupModActivity</string>
    <string name="member_name">Member Name</string>
    <string name="group_name">Group Name</string>
    <string name="remove_member_button">Remove this Member</string>
    <string name="androidfriends">Android Friends</string>
    <string name="edit_name_button">Edit name of the group</string>
    <string name="title_activity_edit_event">Edit Expense</string>
    <string name="title_activity_edit_cash_transfer">Edit Cash Transfer Activity</string>
    <string name="title_activity_import_group_database">Import Group</string>
    <string name="title_activity_personal">Personal Expense Manager</string>
    <string name="selectExpense">Select Expense</string>
    <string name="selectCategory">Select Category</string>
    <string name="name">Name</string>
    <string name="selectBill">Select Bill</string>
    <string name="dueDate">Due Date</string>
    <string name="editExpense">Edit Expense</string>
    <string name="deleteExpense">Delete Expense</string>
    <string name="restoreExpense">Restore Deleted Expense</string>
    <string name="clearBalance">Clear Balance</string>
    <string name="menu_clear_expense">Clear Expense History</string>
    <string name="payBill">Pay Bill</string>
    <string name="deleteBill">Delete Bill</string>
    <string name="expenseName">Expense Name</string>
    <string name="category">Category</string>
    <string name="title_activity_expense">Personal Expenses</string>
    <string name="title_activity_add_expense">Add New Expense</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="title_activity_bill">Bills Due</string>
    <string name="previousBill">Previous Bill</string>
    <string name="nextBill">Next Bill</string>
    <string name="editBill">Edit Bill</string>
    <string name="restoreBill">Restore Bill</string>
    <string name="billDueDate">Due Date</string>
    <string name="title_activity_add_bill">Add New Bill</string>
    <string name="title_activity_edit_bill">Edit Bill</string>
    <string name="billDateFormat">DD/MM/YYYY</string>
    <string name="noInfo">No Personal Information Available</string>
    <string name="addInfo">Add Information</string>
    <string name="billName">Bill Name</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="addIncome">Add Income</string>
    <string name="removeIncome">Remove Income</string>
    <string name="title_activity_add_info">Add Personal Information</string>
    <string name="title_activity_edit_info">Edit Personal Information</string>
    <string name="title_activity_balance">Balance Statistics</string>
    <string name="title_activity_expenses_stats">Expense Breakdown</string>
    <string name="balancePieChart">Balance Pie Chart</string>
    <string name="expensePieChart">Expenses Pie Chart</string>
    <string name="expenseStats">Expense Breakdown</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="travel">Travel</string>
    <string name="accommodation">Accommodation</string>
    <string name="shopping">Shopping</string>
    <string name="bills">Bills</string>
    <string name="groupExpenses">Group Expenses</string>
    <string name="miscellaneous">Miscellaneous</string>
</resources>