<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/NewGroupScroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:background="#222222" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/groupNametextView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/grpname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#F2F5A9"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editButton"
            style="@style/EditButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/desc2"
            android:onClick="editGroup"
            android:tag="4" />

        <LinearLayout
            android:id="@+id/groupSummaryLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/groupNametextView"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/addEventButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:onClick="toAddEvent"
                android:text="@string/addevent" />

            <Button
                android:id="@+id/cashTransferButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:onClick="cashTransfer"
                android:text="@string/cashtransfer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/groupSummaryLinearLayoutMiddle"
            android:layout_below="@+id/groupSummaryLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/MemberNametextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupsummaryname"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ToPaytextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="@string/topay"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ToGettextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/toget"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/groupSummaryTableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/groupSummaryLinearLayoutMiddle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" >
        </TableLayout>

        <LinearLayout
            android:id="@+id/groupSummaryBottomLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/groupSummaryTableLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/historyButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="showHistory"
                android:text="@string/history" />

            <Button
                android:id="@+id/solutionButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:onClick="showSolution"
                android:text="@string/solution" />
            
            <Button
                android:id="@+id/nullifyButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:onClick="nullifyAlert"
                android:text="@string/clear" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>