<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/billSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selectBill"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/billDropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/billPreviousNextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" >

            <ImageButton
                android:id="@+id/billPreviousButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/previousBill"
                android:onClick="previousBill"
                android:visibility="invisible"
                android:src="@drawable/ic_menu_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5" />

            <ImageButton
                android:id="@+id/billNextButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/nextBill"
                android:onClick="nextBill"
                android:src="@drawable/ic_menu_forward" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/billHeaderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="visible" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
                
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/billDueDate"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
                    
        </LinearLayout>

        <LinearLayout
            android:id="@+id/billTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/billEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <Button
                android:id="@+id/editBillButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="editBill"
                android:text="@string/editBill" />

            <Button
                android:id="@+id/billDeleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="deleteBill"
                android:text="@string/deleteBill" />
        </LinearLayout>
        
        <Button
            android:id="@+id/billPayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
	        android:layout_margin="20dp"
            android:gravity="center"
            android:onClick="payBill"
            android:text="@string/payBill" />
        
    </LinearLayout>

</ScrollView>